tree-sitter-frg/test/corpus/advanced.txt
==================
void a value
==================

void func()

---

(source_file
  (statement
    (void_statement
      (expression
        (function_call
          (expression
            (identifier)))))))


==================
expression after if statement
==================

if true {}
leg_count

---

(source_file
  (statement
    (if_statement
      (expression
        (bool_literal))
      (block)))
  (statement
    (void_statement
      (expression
        (identifier)))))
