tree-sitter-frg/test/corpus/control_flow.txt
==================
basic if statement
==================

if 5 {}

---

(source_file
  (statement
    (if_statement
      (expression
        (int_literal))
      (block))))


==================
funny nested
==================

if true {
	if 4 + 9 < 3 {
		
	} else if 1 > 92 {
		
	} else {
		
	}
} else {
	
}

---

(source_file
  (statement
    (if_statement
      (expression
        (bool_literal))
      (block
        (statement
          (if_statement
            (expression
              (binary_expression
                (expression
                  (binary_expression
                    (expression
                      (int_literal))
                    (expression
                      (int_literal))))
                (expression
                  (int_literal))))
            (block)
            (else_if_statement
              (expression
                (binary_expression
                  (expression
                    (int_literal))
                  (expression
                    (int_literal))))
              (block))
            (else_statement
              (block)))))
      (else_statement
        (block)))))


==================
funny nested but with LESS :( keywords lmao
==================

true {
	 4 + 9 < 3 {
		
	} else 1 > 92 {
		
	} else {
		
	}
} else {
	
}

---

(source_file
  (statement
    (if_statement
      (expression
        (bool_literal))
      (block
        (statement
          (if_statement
            (expression
              (binary_expression
                (expression
                  (binary_expression
                    (expression
                      (int_literal))
                    (expression
                      (int_literal))))
                (expression
                  (int_literal))))
            (block)
            (else_if_statement
              (expression
                (binary_expression
                  (expression
                    (int_literal))
                  (expression
                    (int_literal))))
              (block))
            (else_statement
              (block)))))
      (else_statement
        (block)))))
